@@ -2,6 +2,6 @@ AUX ktigcc.desktop 196 RMD160 9b9e175fe5e43bbe403344c975cc357808ed817f SHA1 f14a
 AUX ktigcc.xml 304 RMD160 6675399d4552b1a8343bf6bd3211be0aadd814de SHA1 67550ed16742db967bb87c889a8b7da89b769e83 SHA256 ea7eff450b33bd041cbf980f2925ce9d2ad8025a70625473541f65163d7dc735
 AUX x-tigcc-project.desktop 137 RMD160 b1c9450d478db9b5b6dde740dd48e17a19d487b9 SHA1 9dacc472f0040f03000f5ab2b99e80037fc3e422 SHA256 2fd3d5727fa01b70d52d0fb2b6a688816d9417518b9f76e9ee330a40097e814d
 DIST ktigcc-1.09.tar.bz2 147984 RMD160 2a112877b43b0231df61ec4d2bc7d12c020a1026 SHA1 5f579bf17e81c5ecb6fdead758efbcebce251ad2 SHA256 24257b980d18daf5ef50a23f7c92f80180b504aaf51026d50f9afbadf7a8acf7
-EBUILD ktigcc-1.09.ebuild 1412 RMD160 facf41915e1558fedc65569e95056b7bc40a7e2d SHA1 f1e3144bc680a49bc3bde6712c2c6d795ac1610f SHA256 d6e53af9977a37f7a46574ed1ddc17bbd063e1f493b44d7e2a7291d7a63e3fe5
-MISC ChangeLog 1445 RMD160 17e2889e73afefeffa6e1e9b08a0594d5dfde715 SHA1 98baef254b9296d5a3b5052ae9969364a7cbf3ca SHA256 12be2d2bb91c8aec327fbb63d13971d5869894e5618d169799e005251fb05a8e
+EBUILD ktigcc-1.09.ebuild 1452 RMD160 0072c9bc3ce75bd88b4437465e09b72c334954a2 SHA1 6aba8a56fa98cf5b2240d75c7546a7bde0d5fe09 SHA256 9bfb1498b6c2c0d6c48d0c1ef528e7e6c71dba15e57d562834a08cff6e395c8b
+MISC ChangeLog 1605 RMD160 42ec701b36c5eb63a765fe2d747df22cc67bba9a SHA1 4d6b3d56d6c22c353bf216b70749988bb2b41ff8 SHA256 da35b594ec5684b84b0a74931bd5e1baef0c98f7d669f7118355f404ffe2d7a3
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
